# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path =
    "${component_name}/distributed_notification_service/unittest"

ohos_unittest("notification_subscriber_stub_test") {
  module_out_path = module_output_path

  include_dirs = [
    ".",
    "include",
    "/${services_path}/ans/include",
    "/${frameworks_module_extension_path}/include",
    "${services_path}/ans/test/unittest/mock/include",
  ]

  sources = [
    "${frameworks_module_extension_path}/test/unittest/notification_subscriber_stub_test.cpp",
  ]

  deps = [
    "${frameworks_module_ans_path}:ans_innerkits",
    "${frameworks_module_extension_path}:notification_subscriber_extension_common",
    "${frameworks_module_extension_path}:notification_subscriber_ipc",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "ipc:ipc_napi",
    "napi:ace_napi",
  ]

  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}

ohos_unittest("notification_subscriber_extension_context_test") {
  module_out_path = module_output_path

  include_dirs = [
    ".",
    "include",
    "mock/include",
    "/${services_path}/ans/include",
    "/${frameworks_module_extension_path}/include",
    "${services_path}/ans/test/unittest/mock/include",
  ]

  sources = [
    "${frameworks_module_extension_path}/test/unittest/notification_subscriber_extension_context_test.cpp",
    "mock/mock_accesstoken_kit.cpp",
  ]

  deps = [
    "${frameworks_module_ans_path}:ans_innerkits",
    "${frameworks_module_extension_path}:notification_subscriber_extension_common",
    "${frameworks_module_extension_path}:notification_subscriber_ipc",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "ipc:ipc_napi",
    "napi:ace_napi",
  ]

  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}

group("unittest") {
  testonly = true
  deps = [
    ":notification_subscriber_stub_test",
    ":notification_subscriber_extension_context_test",
  ]
}
